[gd_scene load_steps=12 format=3 uid="uid://drm3ima8x8w7e"]

[ext_resource type="Script" uid="uid://bcksl78x511hh" path="res://src/brick/main.gd" id="1_05pdn"]
[ext_resource type="Script" uid="uid://bhcjydboxjytd" path="res://src/brick/manager.gd" id="2_oau1y"]
[ext_resource type="FontFile" uid="uid://cbhhff5f0gqx" path="res://art/textures/brick/breakout_pieces_to_font.png" id="3_gfeeb"]
[ext_resource type="PackedScene" uid="uid://le0ck4wsgfr6" path="res://src/brick/platform.tscn" id="3_o5op8"]
[ext_resource type="PackedScene" uid="uid://cxfxvter4j00h" path="res://src/brick/indestructible.tscn" id="5_p3il4"]
[ext_resource type="PackedScene" uid="uid://mtynhape1nsy" path="res://src/brick/hud.tscn" id="6_aktmu"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lady1"]
friction = 0.0
bounce = 1.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_hd673"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ahmjk"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_poher"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_i8tyt"]

[node name="Main" type="Node2D"]
script = ExtResource("1_05pdn")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1200.0
offset_bottom = 700.0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="Surrounding" type="Node" parent="."]

[node name="Wall1" type="StaticBody2D" parent="Surrounding"]
physics_material_override = SubResource("PhysicsMaterial_lady1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surrounding/Wall1"]
position = Vector2(16, 0)
shape = SubResource("WorldBoundaryShape2D_hd673")

[node name="Wall2" type="StaticBody2D" parent="Surrounding"]
physics_material_override = SubResource("PhysicsMaterial_lady1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surrounding/Wall2"]
position = Vector2(0, 16)
shape = SubResource("WorldBoundaryShape2D_ahmjk")

[node name="Wall3" type="StaticBody2D" parent="Surrounding"]
physics_material_override = SubResource("PhysicsMaterial_lady1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surrounding/Wall3"]
position = Vector2(960, 16)
shape = SubResource("WorldBoundaryShape2D_poher")

[node name="BottomArea" type="Area2D" parent="Surrounding"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Surrounding/BottomArea"]
position = Vector2(16, 540)
shape = SubResource("WorldBoundaryShape2D_i8tyt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 270)
zoom = Vector2(1.2, 1.2)

[node name="Manager" type="Node" parent="."]
script = ExtResource("2_oau1y")

[node name="Platform" parent="." instance=ExtResource("3_o5op8")]
position = Vector2(0, 500)

[node name="ItemList" type="ItemList" parent="."]
z_index = 20
texture_filter = 1
offset_left = 20.0
offset_top = 15.0
offset_right = 263.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("3_gfeeb")
item_count = 3
item_0/text = "proliferation: 0"
item_0/selectable = false
item_1/text = "prolong: 0"
item_1/selectable = false
item_2/text = "precise: 0"
item_2/selectable = false

[node name="Indestructibles" type="Node2D" parent="."]

[node name="Lv3" type="Node2D" parent="Indestructibles"]

[node name="Indestructible" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(352, 152)
color = "brown"
tag = "3"

[node name="Indestructible15" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(352, 392)
color = "brown"
tag = "3"

[node name="Indestructible17" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(416, 392)
color = "brown"
tag = "3"

[node name="Indestructible18" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(544, 392)
color = "brown"
tag = "3"

[node name="Indestructible16" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(608, 392)
color = "brown"
tag = "3"

[node name="Indestructible2" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(416, 152)
color = "brown"
tag = "3"

[node name="Indestructible3" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(480, 152)
color = "brown"
tag = "3"

[node name="Indestructible4" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(544, 152)
color = "brown"
tag = "3"

[node name="Indestructible5" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(608, 152)
color = "brown"
tag = "3"

[node name="Indestructible7" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(312, 176)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Indestructible8" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(312, 240)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Indestructible9" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(312, 304)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Indestructible10" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(312, 368)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Indestructible11" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(648, 176)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Indestructible12" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(648, 240)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Indestructible13" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(648, 304)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Indestructible14" parent="Indestructibles/Lv3" instance=ExtResource("5_p3il4")]
position = Vector2(648, 368)
rotation = 1.5708
color = "brown"
tag = "3"

[node name="Lv4" type="Node2D" parent="Indestructibles"]

[node name="Indestructible" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(352, 152)
color = "grey"
tag = "4"

[node name="Indestructible15" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(352, 392)
color = "grey"
tag = "4"

[node name="Indestructible17" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(416, 392)
color = "grey"
tag = "4"

[node name="Indestructible18" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(544, 392)
color = "grey"
tag = "4"

[node name="Indestructible16" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(608, 392)
color = "grey"
tag = "4"

[node name="Indestructible2" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(416, 152)
color = "grey"
tag = "4"

[node name="Indestructible3" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(480, 152)
color = "grey"
tag = "4"

[node name="Indestructible4" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(544, 152)
color = "grey"
tag = "4"

[node name="Indestructible5" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(608, 152)
color = "grey"
tag = "4"

[node name="Indestructible7" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(312, 176)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Indestructible8" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(312, 240)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Indestructible9" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(312, 304)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Indestructible10" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(312, 368)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Indestructible11" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(648, 176)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Indestructible12" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(648, 240)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Indestructible13" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(648, 304)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Indestructible14" parent="Indestructibles/Lv4" instance=ExtResource("5_p3il4")]
position = Vector2(648, 368)
rotation = 1.5708
color = "grey"
tag = "4"

[node name="Lv5" type="Node2D" parent="Indestructibles"]

[node name="Indestructible" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(32, 88)
color = "golden"
tag = "5"

[node name="Indestructible2" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(96, 88)
color = "golden"
tag = "5"

[node name="Indestructible3" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(160, 88)
color = "golden"
tag = "5"

[node name="Indestructible4" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(224, 88)
color = "golden"
tag = "5"

[node name="Indestructible5" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(288, 88)
color = "golden"
tag = "5"

[node name="Indestructible6" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(352, 88)
color = "golden"
tag = "5"

[node name="Indestructible7" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(416, 88)
color = "golden"
tag = "5"

[node name="Indestructible8" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(480, 88)
color = "golden"
tag = "5"

[node name="Indestructible9" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(544, 88)
color = "golden"
tag = "5"

[node name="Indestructible10" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(608, 88)
color = "golden"
tag = "5"

[node name="Indestructible11" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(672, 88)
color = "golden"
tag = "5"

[node name="Indestructible12" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(736, 88)
color = "golden"
tag = "5"

[node name="Indestructible13" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(800, 88)
color = "golden"
tag = "5"

[node name="Indestructible14" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(160, 168)
color = "golden"
tag = "5"

[node name="Indestructible15" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(224, 168)
color = "golden"
tag = "5"

[node name="Indestructible16" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(288, 168)
color = "golden"
tag = "5"

[node name="Indestructible17" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(352, 168)
color = "golden"
tag = "5"

[node name="Indestructible18" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(416, 168)
color = "golden"
tag = "5"

[node name="Indestructible19" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(480, 168)
color = "golden"
tag = "5"

[node name="Indestructible20" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(544, 168)
color = "golden"
tag = "5"

[node name="Indestructible21" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(608, 168)
color = "golden"
tag = "5"

[node name="Indestructible22" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(672, 168)
color = "golden"
tag = "5"

[node name="Indestructible23" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(736, 168)
color = "golden"
tag = "5"

[node name="Indestructible24" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(800, 168)
color = "golden"
tag = "5"

[node name="Indestructible29" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(160, 264)
color = "golden"
tag = "5"

[node name="Indestructible30" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(224, 264)
color = "golden"
tag = "5"

[node name="Indestructible31" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(288, 264)
color = "golden"
tag = "5"

[node name="Indestructible32" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(352, 264)
color = "golden"
tag = "5"

[node name="Indestructible33" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(416, 264)
color = "golden"
tag = "5"

[node name="Indestructible34" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(480, 264)
color = "golden"
tag = "5"

[node name="Indestructible35" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(544, 264)
color = "golden"
tag = "5"

[node name="Indestructible36" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(608, 264)
color = "golden"
tag = "5"

[node name="Indestructible37" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(672, 264)
color = "golden"
tag = "5"

[node name="Indestructible38" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(736, 264)
color = "golden"
tag = "5"

[node name="Indestructible39" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(800, 264)
color = "golden"
tag = "5"

[node name="Indestructible40" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(160, 360)
color = "golden"
tag = "5"

[node name="Indestructible41" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(224, 360)
color = "golden"
tag = "5"

[node name="Indestructible42" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(288, 360)
color = "golden"
tag = "5"

[node name="Indestructible43" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(352, 360)
color = "golden"
tag = "5"

[node name="Indestructible44" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(416, 360)
color = "golden"
tag = "5"

[node name="Indestructible45" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(480, 360)
color = "golden"
tag = "5"

[node name="Indestructible46" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(544, 360)
color = "golden"
tag = "5"

[node name="Indestructible47" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(608, 360)
color = "golden"
tag = "5"

[node name="Indestructible48" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(672, 360)
color = "golden"
tag = "5"

[node name="Indestructible49" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(736, 360)
color = "golden"
tag = "5"

[node name="Indestructible50" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(800, 360)
color = "golden"
tag = "5"

[node name="Indestructible51" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(864, 360)
color = "golden"
tag = "5"

[node name="Indestructible52" parent="Indestructibles/Lv5" instance=ExtResource("5_p3il4")]
position = Vector2(928, 360)
color = "golden"
tag = "5"

[node name="HUD" parent="." instance=ExtResource("6_aktmu")]

[connection signal="level_over" from="." to="." method="_on_level_over"]
[connection signal="body_entered" from="Surrounding/BottomArea" to="." method="_on_bottom_area_body_entered"]
[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="exit" from="HUD" to="." method="_on_hud_exit"]
